deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 2
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      containers:
      - name: rest-api
        image: myacrschoewe.azurecr.io/anschoewe/b2c-rest-api:#{Build.BuildId}#
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8901
        readinessProbe:
          httpGet:
            path: /
            port: 8901
            scheme: HTTP
            initialDelaySeconds: 55
            periodSeconds: 5
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8901
    name: http
  selector:
    app: rest-api
