ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: b2c-rest-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: $1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - aks4-schoewe.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: aks4-schoewe.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /b2c(/.*)
        backend:
          serviceName: rest-api
          servicePort: 80
